@@ -104,15 +104,16 @@ def main():
 
     # the filtering function.
     def process_fn(record):
-        name = record['name']
-        seq = record['sequence']
-        if 'N' in seq:
-            return None, None
+        name = record.name
+        seq = record.sequence
+        seqN = seq.replace('N', 'A')
 
-        trim_seq, trim_at = htable.trim_on_abundance(seq, args.cutoff)
+        trim_seq, trim_at = htable.trim_on_abundance(seqN, args.cutoff)
 
         if trim_at >= args.ksize:
-            return name, trim_seq
+            # be sure to not to change the 'N's in the trimmed sequence -
+            # so, return 'seq' not 'seqN' or 'trim_seq'.
+            return name, seq[:trim_at]
 
         return None, None
 
