@@ -80,12 +80,12 @@ def main():
 
     check_input_files(args.input_table, args.force)
     infiles = args.input_filename
-    for _ in infiles:
-        check_input_files(_, args.force)
+    for filename in infiles:
+        check_input_files(filename, args.force)
 
     check_space(infiles, args.force)
 
-    print >>sys.stderr, 'loading hashtable'
+    print >>sys.stderr, 'loading counting table:', args.input_table
     htable = khmer.load_counting_hash(args.input_table)
     ksize = htable.ksize()
 
@@ -93,20 +93,21 @@ def main():
 
     # the filtering function.
     def process_fn(record):
-        name = record['name']
-        seq = record['sequence']
-        if 'N' in seq:
-            return None, None
+        name = record.name
+        seq = record.sequence
+        seqN = seq.replace('N', 'A')
 
         if args.variable_coverage:  # only trim when sequence has high enough C
-            med, _, _ = htable.get_median_count(seq)
+            med, _, _ = htable.get_median_count(seqN)
             if med < args.normalize_to:
                 return name, seq
 
-        trim_seq, trim_at = htable.trim_on_abundance(seq, args.cutoff)
+        trim_seq, trim_at = htable.trim_on_abundance(seqN, args.cutoff)
 
         if trim_at >= ksize:
-            return name, trim_seq
+            # be sure to not to change the 'N's in the trimmed sequence -
+            # so, return 'seq' not 'seqN' or 'trim_seq'.
+            return name, seq[:trim_at]
 
         return None, None
 
